# freedom-wall

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE.md  README.md  book.toml  build.rs  contributing.md  data.json  freedomwall.py  index.html  package.json  pnpm-lock.yaml  print.html  searchindex.js  searchindex.json
.github/workflow/: mdBook.yml
.github/workflows/: mdBook.yml
LICENSE/: LICENSE_Threading.txt  LICENSE_infi.systray.txt
docs/: CNAME  README.md  SUMMARY.md
docs/extension/: detail.md
docs/quickstart/: detail.md  end.md  register_wallpaper.md  setup_to_app.md
docs/setting/: detail.md  developer_mode.md  draw_interval.md  language.md  wallpaper.md
extension/: detail.html
installer/macos/: make_dmg.sh  manifest.json
installer/windows/: FreedomWall.iss  LICENSE-ja  README.md  after_install.txt
locales/app/: en.yml  ja.yml
pages/: credit.html  extensions.html  home.html  layout.html  macros.html  setting.html  style.css  wallpapers.html
pages/freedomwall/: _utils.js  extensions.js  index.js  setting.js  templates.js  utils.js  wallpapers.js
quickstart/: detail.html  end.html  register_wallpaper.html  setup_to_app.html
setting/: detail.html  developer_mode.html  draw_interval.html  language.html  wallpaper.html
src/: NotFound.html  data_manager.rs  main.html  main.rs  manager.rs  platform.rs  setting.css  setting.html  setting.js  utils.rs  wallpaper.rs  window.rs
src-tauri/: Cargo.toml  tauri.conf.json
src/freedomwall/: general.js  utils.js
src/locales/: TODO.en.yml  TODO.ja.yml  en.yml  ja.yml
src/platform/: all.rs  macos.rs  windows.rs
templates/Picture/: data.json  index.html
templates/YouTube/: data.json  index.html
util/: player.py  tasktray.py  win32.py
