[package]
name = "FreedomWall"
version = "2.0.0"
authors = ["tasuren <tasuren@aol.com>"]
edition = "2021"
description = "An application that allows you to add wallpaper to any window."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://freedomwall.f5.si"
repository = "https://github.com/tasuren/FreedomWall"
keywords = ["app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.24.0"
core-graphics = "0.22.3"
core-foundation = "0.9.3"

# [target.'cfg("windows")'.dependencies]

[dependencies]
once_cell = "1.10.0"
wry = "0.13.3"
tao = "0.6.3"
mime_guess = "2.0.4"
url = "2.2.2"
serde = "1.0.136"
serde_json = "1.0.79"
platform-dirs = "0.3.0"
native-dialog = "0.6.3"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3