[package]
name = "FreedomWall"
version = "2.0.0"
authors = ["tasuren <tasuren@aol.com>"]
edition = "2021"
description = "An application that allows you to add wallpaper to any window."
readme = "README.md"
license-file = "LICENSE"
homepage = "https://freedomwall.f5.si"
repository = "https://github.com/tasuren/FreedomWall"
keywords = ["app"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os="macos")'.dependencies]
objc = "0.2.7"
core-graphics = "0.22.3"
core-foundation = "0.9.3"

[target.'cfg(target_os="windows")'.dependencies.windows-sys]
version = "0.34.0"
features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[dependencies]
wry = "0.14.0"
mime_guess = "2.0.4"
url = "2.2.2"
urlencoding = "2.1.0"
serde = "1.0.136"
serde_json = "1.0.79"
platform-dirs = "0.3.0"
rfd = "0.8.1"
lazy_static = "1.4.0"
rust-i18n = "0.5.1"

[build-dependencies]
tera = "1.15.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[package.metadata.i18n]
available-locales = ["en", "ja"]
default-locale = "en"
load-path = "locales/app"